client/styles/index.scss
/* ... */
@media only screen and (max-width: 480px) {
  .banner {
    margin-bottom: 90px;
  }

  .about-hr {
    width: 100%;
  }

  // Main page

  .section-text {
    font-size: 16px;
  }

  .section-header,
  .hero-header {
    font-size: 24px;
  }
}

@media screen and (max-width: 390px) {
  #landing-page p {
    font-size: 28px;
  }

  .hollow-button,
  .solid-button {
    width: 160px;
    font-size: 12px;
  }

  .banner {
    font-size: 32px;
    width: 390px;
    height: 180px;
  }
}

